@@ -41,7 +41,6 @@ public:
     Ice::ObjectPtr findServant(const Ice::Identity&) const;
 
     void addServantLocator(const Ice::ServantLocatorPtr& locator, const std::string&);
-    void removeServantLocator(const std::string&);
     Ice::ServantLocatorPtr findServantLocator(const std::string&) const;
 
 private:
