@@ -1,6 +1,10 @@
 Changes since version 1.1.0
 ---------------------------
 
+- ObjectAdapter::removeServantLocator() no longer exists.
+  The life cycle of servant locators that are registered
+  with an object adapter ends when the adapter is destroyed.
+
 - Changed Ice::ServantLocator::deactivate to be passed the category for
   which a servant locator is being deactivated.
 
